Fix: badge layout on mobile

--- a/component-library/components/sections/skills-showcase/skills-showcase.scss
+++ b/component-library/components/sections/skills-showcase/skills-showcase.scss
@@ -31,6 +31,11 @@
             column-gap: 12px;
             row-gap: 16px;
             flex-wrap: wrap;
+            justify-content: center;
+
+            @media screen and (min-width: 768px) {
+                justify-content: left;
+            }
 
             .c-technology-badge {
                 opacity: 0;
